--- a/GMSClient/GMSClient.csproj
+++ b/GMSClient/GMSClient.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Blazored.LocalStorage" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Radzen.Blazor" Version="2.15.19" />
   </ItemGroup>
 
 </Project>
